# codypy

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  config.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: lint.yml
CodyAgentPy/: CodyAgentPy.py  ServerInfo.py
app/: CodyAgentPy.py
cody_agent_py/: client_info.py  cody_agent_py.py  config.py  messaging.py  server_info.py
codypy/: __init__.py  agent.py  chat.py  cli.py  client_info.py  cody_py.py  config.py  context.py  exceptions.py  logger.py  messaging.py  models.py  new.py  process.py  server.py  server_info.py  utils.py
