[project]
name = "codypy"
version = "0.1.2"
description = "Python wrapper binding for Cody Agent"
authors = [{ name = "PriNova", email = "info@prinova.de" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["cody", "cody-agent", "sourcegraph", "ai", "assistant"]
dependencies = [
    "requests",
    "python-dotenv",
    "pydantic",
    "pydantic_core",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "ruff",
]

[project.urls]
documentation = "https://github.com/PriNova/codypy/blob/main/README.md"
repository = "https://github.com/PriNova/codypy"

[project.scripts]
codypy = "codypy.cli:main"

[tool.isort]
profile = "black"
